docs/7.57/md/abenamdp_classes.md
---
title: "AMDP - Classes"
description: |
  An AMDP class is a global class in the class library(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenclass_library_glosry.htm 'Glossary Entry') that implements one or more of the following tag interfaces(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abentag_interface_
version: "7.57"
category: "oop"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenamdp_classes.htm"
abapFile: "abenamdp_classes.htm"
keywords: ["select", "do", "if", "try", "method", "class", "data", "abenamdp", "classes"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Processing External Data](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_language_external_data.htm) →  [ABAP Database Access](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendb_access.htm) →  [ABAP Managed Database Procedures (AMDP)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenamdp.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: AMDP - Classes, ABENAMDP_CLASSES, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0ASugges
tion for improvement:)

AMDP - Classes

An AMDP class is a global class in the [class library](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenclass_library_glosry.htm "Glossary Entry") that implements one or more of the following [tag interfaces](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abentag_interface_glosry.htm "Glossary Entry"):

-   IF\_AMDP\_MARKER\_HDB for the SAP HANA database

The names of the interfaces all start with IF\_AMDP\_MARKER and a suffix indicates the database system for which the ABAP Managed Database Procedures can be implemented in AMDP methods of the class.

An AMDP class can contain both regular methods and [AMDP methods](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenamdp_methods.htm). It can contain one or more AMDP methods for each database system specified by a tag interface.

Example

Simple example for an AMDP class. The class CL\_DEMO\_AMDP\_SCARR implements the interface IF\_AMDP\_MARKER\_HDB and contains an AMDP method SELECT\_SCARR that gets data from the database table SCARR:

METHOD select\_scarr
       BY DATABASE PROCEDURE FOR HDB
       LANGUAGE SQLSCRIPT
       OPTIONS READ-ONLY
       USING scarr.
  scarr\_tab =
  SELECT \*
         FROM "SCARR"
         WHERE mandt = clnt
         ORDER BY carrid;
ENDMETHOD.

The following program section calls the method and produces the result.

DATA result TYPE cl\_demo\_amdp\_scarr=>scarr\_tab.
NEW cl\_demo\_amdp\_scarr( )->select\_scarr(
  EXPORTING clnt = sy-mandt
  IMPORTING scarr\_tab = result ).
cl\_demo\_output=>display( result ).